--- a/package.json
+++ b/package.json
@@ -6,19 +6,36 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
         "@tailwindcss/forms": "^0.5.2",
+        "@types/react": "^19.0.8",
+        "@types/react-dom": "^19.0.3",
         "@vitejs/plugin-react": "^4.3.4",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
+        "bootstrap": "^5.2.3",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.31",
-        "tailwindcss": "^3.1.0",
-        "vite": "^5.0"
+        "laravel-vite-plugin": "^1.2.0",
+        "postcss": "^8.5.2",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "sass": "^1.56.1",
+        "tailwindcss": "^3.4.17",
+        "vite": "^5.4.14"
     },
     "dependencies": {
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "@splinetool/react-spline": "^4.0.0",
+        "@splinetool/runtime": "^1.9.64",
+        "@tsparticles/engine": "^3.8.1",
+        "@tsparticles/react": "^3.0.0",
+        "@tsparticles/slim": "^3.8.1",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "framer-motion": "^12.4.2",
+        "lib-utils-ts": "^0.0.0-test",
+        "lucide-react": "^0.475.0",
+        "tailwind-merge": "^3.0.1",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
